Erste Version mit funktionierender Darstellung von Sourcecode ueber listings Paket und listings Option.

--- a/reporting.tex
+++ b/reporting.tex
@@ -245,7 +245,7 @@ $if(beamer)$
 \newif\ifbibliography
 $endif$
 $if(listings)$
-\usepackage{listings}
+\usepackage{listings}[breaklines=true]
 \newcommand{\passthrough}[1]{#1}
 \lstset{defaultdialect=[5.3]Lua}
 \lstset{defaultdialect=[x86masm]Assembler}
